# daimon-memory

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  install.sh
.github/workflows/: ci.yml
crates/daimon-cli/: Cargo.toml
crates/daimon-cli/src/: main.rs
crates/daimon-cli/templates/: behavioral-discipline.md  memory-save-discipline.md
crates/daimon-indexer/: Cargo.toml
crates/daimon-indexer/src/: main.rs
crates/daimon-mcp/: Cargo.toml
crates/daimon-mcp/src/: fusion.rs  main.rs  mcp.rs
crates/daimon-memory-core/: Cargo.toml
crates/daimon-memory-core/src/: error.rs  kind.rs  lib.rs  memory.rs  namespace.rs  record.rs  scope.rs  validate.rs
crates/daimon-pg/: Cargo.toml
crates/daimon-pg/src/: lib.rs
crates/daimon-vec/: Cargo.toml
crates/daimon-vec/src/: lib.rs
deploy/: build-job.yaml
integrations/: README.md
integrations/claude-code/: install.sh
integrations/claude-code/.claude-plugin/: marketplace.json
integrations/claude-code/plugins/daimon-memory/: .mcp.json
integrations/claude-code/plugins/daimon-memory/.claude-plugin/: plugin.json
integrations/claude-code/plugins/daimon-memory/commands/: daimon.md
integrations/claude-code/plugins/daimon-memory/hooks/: hooks.json
integrations/claude-code/plugins/daimon-memory/scripts/: auto-recall.mjs  mirror-memory.mjs  nudge-lib.mjs  nudge.mjs  precompact-state.mjs  precompact.mjs  recall-state.mjs  session-end-pass.mjs  session-start.mjs
integrations/claude-code/plugins/daimon-memory/scripts/lib/: daimon.mjs  state-paths.mjs
integrations/codex/: install.sh
integrations/codex/.claude-plugin/: marketplace.json
integrations/codex/plugins/daimon-memory/: .mcp.json
integrations/codex/plugins/daimon-memory/.codex-plugin/: plugin.json
integrations/codex/plugins/daimon-memory/hooks/: hooks.json
integrations/codex/plugins/daimon-memory/scripts/: auto-recall.mjs  mirror-memory.mjs  nudge.mjs  session-start.mjs
integrations/codex/plugins/daimon-memory/scripts/lib/: daimon.mjs
integrations/hermes/: LICENSE  README.md  install.sh  pyproject.toml
integrations/hermes/daimon/: __init__.py  plugin.yaml
integrations/hermes/daimon_hermes/: __init__.py  cli.py  plugin.yaml  provider.py
integrations/hermes/tests/: test_cli.py  test_provider.py
integrations/tests/: nudge-lib.test.mjs
migrations/: V001__memory_schema.sql
