[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://git.wakbijok.uk/daimon/daimon-memory"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# data tier (used by daimon-pg / daimon-mcp once added)
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"
refinery = { version = "0.9", features = ["tokio-postgres"] }
qdrant-client = "1.18"
axum = "0.8"
sha2 = "0.10"

# internal
daimon-memory-core = { path = "crates/daimon-memory-core" }
daimon-pg = { path = "crates/daimon-pg" }
daimon-vec = { path = "crates/daimon-vec" }
