[package]
name = "daimon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "daimon-memory ops CLI: migrate / reindex / health / stats."

[[bin]]
name = "daimon"
path = "src/main.rs"

[dependencies]
daimon-memory-core = { workspace = true }
daimon-pg = { workspace = true }
daimon-vec = { workspace = true }
refinery.workspace = true
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
tokio.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
