[package]
name = "daimon-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Singleton outbox drainer: PG memory.index_outbox -> embed -> Qdrant upsert/delete (SDS v0.2 indexer)."

[[bin]]
name = "daimon-indexer"
path = "src/main.rs"

[dependencies]
daimon-memory-core = { workspace = true }
daimon-pg = { workspace = true }
daimon-vec = { workspace = true }
deadpool-postgres.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
