[package]
name = "daimon-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "daimon-memory cross-tool surface: streamable-HTTP /mcp + versioned REST /v1 over the deterministic engine."

[[bin]]
name = "daimon-mcp"
path = "src/main.rs"

[dependencies]
daimon-memory-core = { workspace = true }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
