[package]
name = "daimon-memory-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic, LLM-free core of daimon-memory: types, canonical taxonomy, namespace/URI grammar, control-layer write validation, and the ContextMemory trait."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
