[package]
name = "daimon-pg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Postgres-backed ContextMemory for daimon-memory: validated store + deterministic full-text recall, tenant-scoped (RLS GUC + explicit predicate)."

[dependencies]
daimon-memory-core = { workspace = true }
deadpool-postgres.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
tracing.workspace = true
