[package]
name = "daimon-vec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedding + Qdrant vector store for daimon-memory semantic recall."

[dependencies]
daimon-memory-core = { workspace = true }
qdrant-client.workspace = true
fastembed = "5"
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
