[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "daimon-hermes"
version = "0.1.0"
description = "daimon-memory provider for the NousResearch Hermes Agent — shared cross-tool memory: deterministic hybrid recall + curated typed capture."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Wak Bijak" }]
keywords = ["hermes", "daimon", "daimon-memory", "memory", "agent", "llm", "rag"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]
# httpx is a base dep on purpose: recall is the provider's core function, so a silent
# no-recall install (httpx as an optional extra) would be worse than pulling it in.
dependencies = ["httpx>=0.24"]

[project.scripts]
daimon-hermes = "daimon_hermes.cli:main"

[project.urls]
Homepage = "https://github.com/wakbijok/daimon-memory"
Repository = "https://github.com/wakbijok/daimon-memory"

[tool.hatch.build]
exclude = ["**/.DS_Store", "**/__pycache__", "**/*.pyc", "**/*.tmp"]

[tool.hatch.build.targets.wheel]
packages = ["daimon_hermes"]   # includes daimon_hermes/plugin.yaml as package data

[tool.hatch.build.targets.sdist]
include = ["daimon_hermes", "tests", "README.md", "LICENSE", "pyproject.toml"]
